syntax = "proto3";

package gramophile;

option go_package = "github.com/brotherlogic/gramophile/proto";

message ClassificationRule {
    string rule_name = 1;
    int32 priority = 2;
}

message Classifier {
    string classifier_name = 1;
    repeated ClassificationRule rule = 2;
    string classification = 3;
}

message ClassificationConfig {
    repeated Classifier classifiers = 1;
}